[package]
name = "serde_tjs"
version = "0.1.0"
edition = "2024"
description = "A Serde serialization/deserialization library for TJS2 data."
repository = "https://github.com/lifegpc/serde_tjs"
license = "MIT"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
